added build and start scripts to package.json; modified package.json script dev to run webpack --mode development instead of webpack-dev-server. webpack-dev-served bound to start script.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "rpn.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "webdev"
+		"dev": "webpack --mode development",
+		"build": "webpack --mode production",
+		"start": "webpack-dev-server --mode development --open"
 	},
 	"keywords": [],
 	"author": "",
